# Handwritten-Sentence-Recognition

./: .gitignore  configs.py  dataset.py  inference_model.py  main.py  model.py  pyproject.toml
utils/: visualization.py  vocab.py
